# utf_convertor

./: CMakeLists.txt
benchmark/: unicode_benchmark.cpp
include/utf/: unify.hpp  unify.hpp.1  unify.hpp.2  unify.hpp.3  unify.hpp.4  unify.hpp.save
test/: u16_to_u16.cpp  u16_to_u32.cpp  u16_to_u8.cpp  u32_to_u16.cpp  u32_to_u32.cpp  u32_to_u8.cpp  u8_to_u16.cpp  u8_to_u32.cpp  u8_to_u8.cpp  u8b_u16b.cpp  unicode_test.txt  unicode_unit_test.cpp
utf_utils/: CMakeLists.txt
utf_utils/include/utf/: unify.hpp
utf_utils/include/util/: argument_parser.hpp  atomic_lock.hpp  char_stream.hpp  global.hpp  helper_functions.hpp  ring_buffer.hpp  transit_buffer.hpp  unicode.hpp  unicode.hpp.1  unify.hpp
utf_utils/src/: utf_utils.h
utf_utils/test/: hoehrmann.cpp  hoehrmann.h  karthik.cpp  karthik.h  test_basics.cpp  test_conversions_16.cpp  test_conversions_32.cpp  test_main.h
